Revert "fix: Workaround to ensure gtex chart mouse hover tooltip has high z-index"
This reverts commit 2b9b27c702d2cc16b42780302318465654c956e4.

--- a/ui/shared/global.css
+++ b/ui/shared/global.css
@@ -62,7 +62,3 @@ body {
   font-weight: 500;
   font-size: 0.95em;
 }
-
-#gene-expression-plot-tooltip {
-  z-index: 4000;
-}
